--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -37,8 +37,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/tvBody"
-        android:layout_alignParentTop="false"
-        android:layout_alignParentEnd="false"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginStart="5dp"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="0dp"
